// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeLinkAndLinkType should remove link and linkType 1`] = `
{
  "disabled": false,
  "id": "social",
  "linkType": "Entry",
  "localized": false,
  "name": "Social",
  "omitted": false,
  "required": false,
  "type": "Link",
  "validations": [
    {
      "linkContentType": [
        "navigationSegment",
      ],
    },
  ],
}
`;

exports[`removeLinkAndLinkType should remove link and linkType from items 1`] = `
{
  "disabled": false,
  "id": "footer",
  "items": {
    "linkType": "Entry",
    "type": "Link",
    "validations": [
      {
        "linkContentType": [
          "navigationSegment",
        ],
      },
    ],
  },
  "localized": false,
  "name": "Footer",
  "omitted": false,
  "required": false,
  "type": "Array",
  "validations": [],
}
`;
